modules/application/22-web-app/security-group.tf
resource "aws_security_group" "security_group" {
  depends_on = [var.network]
  name       = "${var.name}-ecs-svc-sg"
  vpc_id     = var.network.vpc_id

  description = "Security group for web-app ECS service"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.name}-ecs-service-sg"
    Environment = var.runtime_environment
  }
}

resource "aws_vpc_security_group_ingress_rule" "target_ingress_rules" {
  count = length(coalesce(var.allow_to_security_group_ids, []))

  security_group_id            = var.allow_to_security_group_ids[count.index]
  referenced_security_group_id = aws_security_group.security_group.id
  from_port                    = 8080
  to_port                      = 8080
  ip_protocol                  = "tcp"

  lifecycle {
    ignore_changes = [
      referenced_security_group_id
    ]
  }
}

resource "aws_vpc_security_group_ingress_rule" "bastion_host_ingress_rule" {
  count = var.external_security_group_ids.bastion != null ? 1 : 0

  security_group_id            = aws_security_group.security_group.id
  referenced_security_group_id = var.external_security_group_ids.bastion
  from_port                    = 3000
  to_port                      = 3000
  ip_protocol                  = "tcp"

  lifecycle {
    ignore_changes = [
      referenced_security_group_id
    ]
  }
}

resource "aws_vpc_security_group_ingress_rule" "application_load_balancer_ingress_rule" {
  security_group_id            = aws_security_group.security_group.id
  referenced_security_group_id = var.external_security_group_ids.alb
  from_port                    = 3000 # Next.js port
  to_port                      = 3000
  ip_protocol                  = "tcp"

  lifecycle {
    ignore_changes = [
      referenced_security_group_id
    ]
  }
}
